infra/k8s/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: kodrclub/bcdop-backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/api/metrics'
    prometheus.io/port: '3000'
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 3000
      targetPort: 3000
