infra/k8s/hello-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: kodrclub/bcdop-hello

---
apiVersion: v1
kind: Service
metadata:
  name: hello-srv
spec:
  selector:
    app: hello
  ports:
    - name: hello
      protocol: TCP
      port: 3000
      targetPort: 3000
