infra/k8s/server-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-mongo
  template:
    metadata:
      labels:
        app: server-mongo
    spec:
      containers:
        - name: server-mongo
          image: mongo:4.2

---
apiVersion: v1
kind: Service
metadata:
  name: server-mongo-srv
spec:
  selector:
    app: server-mongo
  ports:
    - name: server-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
